@@ -6,7 +6,7 @@
 
     <groupId>org.rac</groupId>
     <artifactId>RACOperationalApp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,6 +30,16 @@
 <!--            <url>https://verve.jfrog.io/artifactory/verve-gradle-release</url>-->
             <url>https://raw.githubusercontent.com/e-ucm/eadventure/master/etc/repository</url>
         </repository>
+        <repository>
+            <id>AsposeJavaAPI</id>
+            <name>Aspose Java API</name>
+            <url>https://releases.aspose.com/java/repo/</url>
+        </repository>
+        <repository>
+            <id>com.e-iceblue</id>
+            <name>e-iceblue</name>
+            <url>http://repo.e-iceblue.com/nexus/content/groups/public/</url>
+        </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
@@ -48,6 +58,16 @@
             <name>Verve Repository</name>
 <!--            <url>https://verve.jfrog.io/artifactory/verve-gradle-release</url>-->
             <url>https://raw.githubusercontent.com/e-ucm/eadventure/master/etc/repository</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>AsposeJavaAPI</id>
+            <name>Aspose Java API</name>
+            <url>https://releases.aspose.com/java/repo/</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>com.e-iceblue</id>
+            <name>e-iceblue</name>
+            <url>http://repo.e-iceblue.com/nexus/content/groups/public/</url>
         </pluginRepository>
     </pluginRepositories>
 
@@ -130,6 +150,44 @@
             <version>0.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>flying-saucer-pdf</artifactId>
+            <version>10.0.6</version> <!-- Check for the latest version -->
+        </dependency>
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>flying-saucer-core</artifactId>
+            <version>10.0.6</version> <!-- Check for the latest version -->
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.21.2</version> <!-- Use latest 2025 version -->
+        </dependency>
+
+        <dependency>
+            <groupId>com.aspose</groupId>
+            <artifactId>aspose-html</artifactId>
+            <version>24.1</version> <!-- Replace with the desired version -->
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.playwright</groupId>
+            <artifactId>playwright</artifactId>
+            <version>1.43.0</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>e-iceblue</groupId>-->
+<!--            <artifactId>spire.doc.free</artifactId>-->
+<!--            <version>5.3.2</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <build>
@@ -141,42 +199,45 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+
                     <compilerArgs>
                         <arg>--module-path</arg>
-                        <arg>${project.build.directory}/lib;C:\\Users\\Abhishek\\SDKs\\javafx-sdk-25.0.1\\lib</arg>
+                        <arg>${project.build.directory}/lib;C:\\Users\\29abh\\SDKs\\javafx-sdk-25.0.1\\lib</arg>
                         <arg>--add-modules</arg>
                         <arg>javafx.controls,javafx.fxml,javafx.web,javafx.swing</arg>
                     </compilerArgs>
                 </configuration>
+
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.openjfx</groupId>-->
-<!--                <artifactId>javafx-maven-plugin</artifactId>-->
-<!--                <version>0.0.8</version>-->
-<!--                <configuration>-->
-<!--                    <mainClass>org.rac.Main</mainClass>-->
-<!--                    <launcher>start</launcher>-->
-<!--                    <jlinkImageName>RACOperationalApp</jlinkImageName>-->
-<!--                    <stripDebug>true</stripDebug>-->
-<!--                    <compress>2</compress>-->
-<!--                    <options>-->
-<!--                        <option>&#45;&#45;add-exports</option>-->
-<!--                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>-->
-<!--                        <option>&#45;&#45;add-exports</option>-->
-<!--                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>-->
-<!--                        <option>&#45;&#45;add-exports</option>-->
-<!--                        <option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>-->
-<!--                    </options>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>default-cli</id>-->
-<!--                        <goals>-->
-<!--                            <goal>run</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>org.rac.NewMain</mainClass>
+                    <launcher>start</launcher>
+                    <jlinkImageName>RACOperationalApp</jlinkImageName>
+                    <stripDebug>true</stripDebug>
+                    <compress>2</compress>
+                    <icon>src/main/resources/app_icon.ico</icon> <!-- Added icon configuration -->
+                    <options>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
+                    </options>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -193,11 +254,21 @@
                                     <mainClass>org.rac.NewMain</mainClass>
                                 </transformer>
                             </transformers>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>3.3.0</version>
@@ -217,7 +288,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 </project>
